--- a/zadania/zad11/podp5-9/index.html
+++ b/zadania/zad11/podp5-9/index.html
@@ -18,9 +18,41 @@
 		<div class="jez1"></div>
 		<div class="jez2"></div>
 	</div>
-
-	<div></div>
+	<br>
+	<br>
+	<br>
+	<br><br>
+	<br><br>
+	<br><br>
+	<br>
 	
+	<div class="rodziclabel clearfix">
 
+		<div class="label">
+			<div class="kolo"></div>
+			<div class="kolko"></div>
+			<h3>NAGŁÓWEK</h3>
+			<p>Lorem ipsum dolor sit amet, in reque clita vim. Duo cu docendi molestie periculis, falli clita fabulas ei nec. Justo denique te est, qualisque </p>
+			<button>Więcej informacji ></button>
+		</div>
+
+		<div class="label">
+			<div class="kolo"></div>
+			<div class="kolko"></div>
+			<h3>NAGŁÓWEK</h3>
+			<p>Lorem ipsum dolor sit amet, in reque clita vim. Duo cu docendi molestie periculis, falli clita fabulas ei nec. Justo denique te est, qualisque </p>
+			<button>Więcej informacji ></button>
+		</div>
+
+		<div class="label">
+			<div class="kolo"></div>
+			<div class="kolko"></div>
+			<h3>NAGŁÓWEK</h3>
+			<p>Lorem ipsum dolor sit amet, in reque clita vim. Duo cu docendi molestie periculis, falli clita fabulas ei nec. Justo denique te est, qualisque </p>
+			<button>Więcej informacji ></button>
+		</div>
+
+	</div>
+	
 </body>
 </html>
